# FiveAxisQt

./: .gitignore  CMakeLists.txt  CMakeUserPresets.json
core/: LaserParamCalculator.cpp  LaserParamCalculator.h
src/: MainWindow.cpp  MainWindow.h
src/Processing/: DataBuffer.cpp  DataBuffer.h  TcpSocketWorker.cpp  TcpSocketWorker.h  ThreeAxisGenerator.cpp  ThreeAxisGenerator.h
src/grpc/: FiveAxisClient.cpp  FiveAxisClient.h
src/view/: DrawingPanel.cpp  DrawingPanel.h  DrawingView.cpp  DrawingView.h  ModelViewerWidget.cpp  ModelViewerWidget.h
